--- a/public/css/user-gesture.css
+++ b/public/css/user-gesture.css
@@ -9,15 +9,16 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.973);
-  font-family: 'Courier New', monospace;
-  font-size: 16px;
+  background: radial-gradient(circle, rgb(255, 234, 253),#008001);
+  font-family: 'Aclonica', monospace;
+  font-size: 20px;
   z-index: 999999;
   cursor: pointer;
 }
 
 .center {
   margin: 0;
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,9 +32,9 @@
   margin-right: auto;
   width: 80%;
   height: 80%;
-  background: #5E5DF0;
+  background: #008001;
   border-radius: 999px;
-  box-shadow: #5E5DF0 0 10px 20px -10px;
+  box-shadow: #008001 0 10px 20px -10px;
   box-sizing: border-box;
   color: #FFFFFF;
   cursor: pointer;
@@ -53,7 +54,7 @@
 }
 
 #user-gesture-button:hover {
-  background-color: rgb(246, 194, 67);
+  background-color: rgb(255, 234, 253);
 }
 
 #loading-animation {
